# r-type

./: README.md
client/: CMakeLists.txt  Iplayer.hpp  Ishoot.hpp  conanfile.txt  ennemies.cpp  ennemies.hpp  main.cpp  mainGame.cpp  mainGame.hpp  mainMenu.cpp  menu.cpp  menu.hpp  player.cpp  player.hpp  shoot.cpp  shoot.hpp
client/include/: client.hpp  network.hpp  server.hpp
server/: CMakeLists.txt  client.cpp  conanfile.txt  main.cpp  player.cpp
server/include/: client.hpp  ennemy.hpp  player.hpp
